--- a/index.html
+++ b/index.html
@@ -21,17 +21,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif:ital,wght@0,400;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif:ital@0;1&display=swap"
     />
   </head>
   <body>
     <div class="page">
-      TESTING
-      <header class="header">HEADER</header>
+      <p class="inter-regular">TESTING</p>
+      <header class="header">
+        <p class="inter-medium">HEADER</p>
+      </header>
       <main class="content">
-        CONTENT
-        <section class="recipes">RECIPES</section>
-        <section class="reservation">RESERVATION</section>
+        <p class="inter-bold">CONTENT</p>
+        <section class="recipes"><p class="noto-regular">RECIPES</p></section>
+        <section class="reservation">
+          <p class="noto-italic">RESERVATION</p>
+        </section>
       </main>
       <footer class="footer">FOOTER</footer>
     </div>
