--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       </header>
       <main class="content">
         <p class="inter-bold">CONTENT</p>
-        <section class="recipes"><p class="noto-regular">RECIPES</p></section>
+        <section class="recipes">
+          <p class="noto-regular">RECIPES</p>
+        </section>
         <section class="reservation">
           <p class="noto-italic">RESERVATION</p>
         </section>
