--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif:ital@0;1&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:@400..700&family=Noto+Serif:ital@0;1&display=swap"
     />
   </head>
   <body>
