--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Serif:ital@0;1&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:@400..700&family=Noto+Serif:ital@0;1&display=swap"
     />
   </head>
   <body>
