--- a/index.html
+++ b/index.html
@@ -26,18 +26,10 @@
   </head>
   <body>
     <div class="page">
-      <p class="inter-regular">TESTING</p>
-      <header class="header">
-        <p class="inter-medium">HEADER</p>
-      </header>
+      <header class="header"></header>
       <main class="content">
-        <p class="inter-bold">CONTENT</p>
-        <section class="recipes">
-          <p class="noto-regular">RECIPES</p>
-        </section>
-        <section class="reservation">
-          <p class="noto-italic">RESERVATION</p>
-        </section>
+        <section class="recipes"></section>
+        <section class="reservation"></section>
       </main>
       <footer class="footer">FOOTER</footer>
     </div>
