Add styles to finish stage 1.1

--- a/index.html
+++ b/index.html
@@ -26,12 +26,61 @@
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <!-- Menu de Navegacao -->
+        <nav class="nav">
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Logotipo do CoffeeShop"
+            class="nav__logo"
+          />
+          <ul class="nav__links">
+            <li>
+              <a class="nav__link">Receitas</a>
+            </li>
+            <li>
+              <a class="nav__link">Reservar uma mesa</a>
+            </li>
+            <li>
+              <a class="nav__link">Contatos</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header__content">
+          <div>
+            <h1 class="header__title">
+              <span class="header__span-accent">Café especial</span> na
+              biblioteca Triple Peaks
+            </h1>
+
+            <p class="header__description">
+              Esta é nossa zona de estudo! Temos aquele cafezinho para energizar
+              você e vibrações aconchegantes para soltar a criatividade.
+            </p>
+          </div>
+          <img
+            src="./images/inside_coffee_shop.png"
+            alt="Ilustração 'Dentro da biblioteca'"
+            class="header__image"
+          />
+        </div>
+        <div class="header__footer">
+          <ul class="header__hours">
+            <li>Horarios</li>
+            <li>Segunda a sexta (10:00 - 19:00)</li>
+            <li>Sabado a Domingo (11:00 - 18:00)</li>
+          </ul>
+          <p class="header__address">
+            200 Success Avenue, a cidade da Triple Peaks
+          </p>
+        </div>
+      </header>
+
       <main class="content">
         <section class="recipes"></section>
         <section class="reservation"></section>
       </main>
-      <footer class="footer">FOOTER</footer>
+      <footer class="footer"></footer>
     </div>
   </body>
 </html>
