--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
           />
           <ul class="nav__links">
             <li>
-              <a class="nav__link">Receitas</a>
+              <a class="nav__link" href="#recipes">Receitas</a>
             </li>
             <li>
-              <a class="nav__link">Reservar uma mesa</a>
+              <a class="nav__link" href="#reservations">Reservar uma mesa</a>
             </li>
             <li>
               <a class="nav__link">Contatos</a>
@@ -54,7 +54,7 @@
             </h1>
 
             <p class="header__description">
-              Esta é nossa zona de estudo! Temos aquele cafezinho para energizar
+              Esta é nossa zona de estudo! Temos aquele cafézinho para energizar
               você e vibrações aconchegantes para soltar a criatividade.
             </p>
           </div>
@@ -77,9 +77,44 @@
       </header>
 
       <main class="content">
-        <section class="recipes"></section>
-        <section class="reservation"></section>
+        <section class="recipes" id="recipes">
+          <h2 class="recipes__title">Receitas</h2>
+          <p class="recipes__subtitle">
+            Confira algumas receitas quer coletamos para seu lanchinho caseiro:
+          </p>
+          <ul class="recipes__videos">
+            <li class="recipes__video-item">
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=IrqhIrbzK-dE9nT_"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <div class="recipes__video-caption">
+                <p>Receita Aeropress</p>
+                <p><span class="recipes__span-caption">&tilde;</span>5 min</p>
+              </div>
+            </li>
+            <li class="recipes__video-item">
+              <iframe
+                src="https://www.youtube.com/embed/st571DYYTR8?si=4m7Y3hPLvyAuvPm6"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <div class="recipes__video-caption">
+                <p>Receita de Prensa Francesa</p>
+                <p><span class="recipes__span-caption">&tilde;</span>15 min</p>
+              </div>
+            </li>
+          </ul>
+        </section>
+        <section class="reservation" id="reservation"></section>
       </main>
+
       <footer class="footer"></footer>
     </div>
   </body>
