--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             <li>Segunda a sexta (10:00 - 19:00)</li>
             <li>Sabado a Domingo (11:00 - 18:00)</li>
           </ul>
-          <p class="header__address">
-            200 Success Avenue, a cidade da Triple Peaks
-          </p>
+          <div class="header__address">
+            <p>200 Success Avenue, a cidade da Triple Peaks</p>
+          </div>
         </div>
       </header>
 
@@ -94,11 +94,12 @@
               ></iframe>
               <div class="recipes__video-caption">
                 <p>Receita Aeropress</p>
-                <p><span class="recipes__span-caption">&tilde;</span>5 min</p>
+                <p>&#126; 5 min</p>
               </div>
             </li>
             <li class="recipes__video-item">
               <iframe
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=4m7Y3hPLvyAuvPm6"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -107,7 +108,7 @@
               ></iframe>
               <div class="recipes__video-caption">
                 <p>Receita de Prensa Francesa</p>
-                <p><span class="recipes__span-caption">&tilde;</span>15 min</p>
+                <p>&#126; 15 min</p>
               </div>
             </li>
           </ul>
