fix header-title and paragraphs

--- a/index.html
+++ b/index.html
@@ -39,40 +39,34 @@
               <a class="nav__link" href="#recipes">Receitas</a>
             </li>
             <li>
-              <a class="nav__link" href="#reservations">Reservar uma mesa</a>
+              <a class="nav__link" href="#reservation">Reservar uma mesa</a>
             </li>
             <li>
               <a class="nav__link">Contatos</a>
             </li>
           </ul>
         </nav>
-        <div class="header__content">
-          <div>
-            <h1 class="header__title">
-              <span class="header__span-accent">Café especial</span> na
-              biblioteca Triple Peaks
-            </h1>
+        <h1 class="header__title">
+          <span class="header__span-accent">Café especial</span> na biblioteca
+          Triple Peaks
+        </h1>
 
-            <p class="header__description">
-              Esta é nossa zona de estudo! Temos aquele cafézinho para energizar
-              você e vibrações aconchegantes para soltar a criatividade.
-            </p>
-          </div>
-          <img
-            src="./images/inside_coffee_shop.png"
-            alt="Ilustração 'Dentro da biblioteca'"
-            class="header__image"
-          />
-        </div>
+        <p class="header__description">
+          Esta é nossa zona de estudo! Temos aquele cafézinho para energizar
+          você e vibrações aconchegantes para soltar a criatividade.
+        </p>
+        <img
+          src="./images/inside_coffee_shop.png"
+          alt="Ilustração 'Dentro da biblioteca'"
+          class="header__image"
+        />
         <div class="header__footer">
-          <ul class="header__hours">
-            <li>Horarios</li>
-            <li>Segunda a sexta (10:00 - 19:00)</li>
-            <li>Sabado a Domingo (11:00 - 18:00)</li>
-          </ul>
-          <div class="header__address">
-            <p>200 Success Avenue, a cidade da Triple Peaks</p>
-          </div>
+          <p class="header__paragraph">Horarios</p>
+          <p class="header__paragraph">Segunda a sexta (10:00 - 19:00)</p>
+          <p class="header__paragraph">Sabado a Domingo (11:00 - 18:00)</p>
+          <p class="header__paragraph">
+            200 Success Avenue, a cidade da Triple Peaks
+          </p>
         </div>
       </header>
 
@@ -94,7 +88,7 @@
               ></iframe>
               <div class="recipes__video-caption">
                 <p>Receita Aeropress</p>
-                <p>&#126; 5 min</p>
+                <p>&#126;5 min</p>
               </div>
             </li>
             <li class="recipes__video-item">
@@ -108,7 +102,7 @@
               ></iframe>
               <div class="recipes__video-caption">
                 <p>Receita de Prensa Francesa</p>
-                <p>&#126; 15 min</p>
+                <p>&#126;15 min</p>
               </div>
             </li>
           </ul>
