--- a/index.html
+++ b/index.html
@@ -107,9 +107,70 @@
             </li>
           </ul>
         </section>
-        <section class="reservation" id="reservation"></section>
+        <section class="reservation" id="reservation">
+          <h2 class="reservation__title">Reservar uma mesa</h2>
+          <form class="reservation__form">
+            <fieldset class="form__fieldset">
+              <label class="form__label" for="name">Nome *</label>
+              <input
+                class="form__item form__item_name"
+                id="name"
+                type="text"
+                placeholder="Nome"
+                required
+              />
+              <br />
+              <label class="form__label" for="guest"
+                >Numero de convidados *</label
+              >
+              <input
+                class="form__item form__item_guest"
+                type="number"
+                min="1"
+                max="8"
+                id="guest"
+                placeholder="1-8"
+                required
+              />
+              <br />
+              <label class="form__label" for="booking-date"
+                >Data e hora *</label
+              >
+              <input
+                class="form__item form__item_booking-date"
+                type="datetime-local"
+                id="booking-date"
+                required
+              />
+              <br />
+              <label class="form__label" for="email">Seu e-mail *</label>
+              <input
+                class="form__item form__item_email"
+                type="email"
+                id="email"
+                placeholder="email@email.com"
+                required
+              />
+              <br />
+              <button class="form__button" type="submit">
+                Reservar uma mesa
+              </button>
+              <br /><br />
+              <label class="form__label form__label_checkbox" for="terms">
+                <input
+                  class="form__checkbox"
+                  type="checkbox"
+                  name="terms"
+                  id="terms"
+                  value="yes"
+                  required
+                />
+                Eu concordo com os termos de uso</label
+              >
+            </fieldset>
+          </form>
+        </section>
       </main>
-
       <footer class="footer"></footer>
     </div>
   </body>
