--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <fieldset class="reservation__fieldset">
               <label class="reservation__label" for="name">Nome *</label>
               <input
-                class="reservation__input reservation__input--name"
+                class="reservation__input reservation__input_name"
                 id="name"
                 type="text"
                 placeholder="Nome"
@@ -124,7 +124,7 @@
                 >Número de convidados *</label
               >
               <input
-                class="reservation__input reservation__input--guest"
+                class="reservation__input reservation__input_guest"
                 type="number"
                 min="1"
                 max="8"
@@ -137,7 +137,7 @@
                 >Data e hora *</label
               >
               <input
-                class="reservation__input reservation__input--booking-date"
+                class="reservation__input reservation__input_booking-date"
                 type="datetime-local"
                 id="booking-date"
                 required
@@ -145,7 +145,7 @@
               <br />
               <label class="reservation__label" for="email">Seu e-mail *</label>
               <input
-                class="reservation__input reservation__input--email"
+                class="reservation__input reservation__input_email"
                 type="email"
                 id="email"
                 placeholder="email@email.com"
@@ -157,7 +157,7 @@
               </button>
               <br /><br />
               <label
-                class="reservation__label reservation__label--checkbox"
+                class="reservation__label reservation__label_checkbox"
                 for="terms"
               >
                 <input
