--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </section>
         <section class="reservation" id="reservation">
           <h2 class="reservation__title">Reservar uma mesa</h2>
-          <form class="reservation__form">
+          <form class="reservation__form form">
             <fieldset class="reservation__fieldset">
               <label class="reservation__label" for="name">Nome *</label>
               <input
@@ -155,7 +155,7 @@
               <button class="reservation__button" type="submit">
                 Reservar uma mesa
               </button>
-              <br /><br />
+              <br />
               <label
                 class="reservation__label reservation__label_checkbox"
                 for="terms"
