update nav links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a class="nav__link" href="#reservation">Reservar uma mesa</a>
             </li>
             <li>
-              <a class="nav__link">Contatos</a>
+              <a class="nav__link" href="#footer">Contatos</a>
             </li>
           </ul>
         </nav>
@@ -174,7 +174,7 @@
         </section>
       </main>
 
-      <footer class="footer">
+      <footer class="footer" id="footer">
         <div class="footer__content">
           <img
             src="./images/logo_coffeeshop_light.svg"
