--- a/index.html
+++ b/index.html
@@ -109,21 +109,21 @@
         <section class="reservation" id="reservation">
           <h2 class="reservation__title">Reservar uma mesa</h2>
           <form class="reservation__form form">
-            <fieldset class="reservation__fieldset">
-              <label class="reservation__label" for="name">Nome *</label>
+            <fieldset class="form__fieldset">
+              <label class="form__label" for="name">Nome *</label>
               <input
-                class="reservation__input reservation__input_name"
+                class="form__input"
                 id="name"
                 type="text"
                 placeholder="Nome"
                 required
               />
               <br />
-              <label class="reservation__label" for="guest"
+              <label class="form__label" for="guest"
                 >Número de convidados *</label
               >
               <input
-                class="reservation__input reservation__input_guest"
+                class="form__input"
                 type="number"
                 min="1"
                 max="8"
@@ -132,35 +132,32 @@
                 required
               />
               <br />
-              <label class="reservation__label" for="booking-date"
+              <label class="form__label" for="booking-date"
                 >Data e hora *</label
               >
               <input
-                class="reservation__input reservation__input_booking-date"
+                class="form__input"
                 type="datetime-local"
                 id="booking-date"
                 required
               />
               <br />
-              <label class="reservation__label" for="email">Seu e-mail *</label>
+              <label class="form__label" for="email">Seu e-mail *</label>
               <input
-                class="reservation__input reservation__input_email"
+                class="form__input"
                 type="email"
                 id="email"
                 placeholder="email@email.com"
                 required
               />
               <br />
-              <button class="reservation__button" type="submit">
+              <button class="form__button" type="submit">
                 Reservar uma mesa
               </button>
               <br />
-              <label
-                class="reservation__label reservation__label_checkbox"
-                for="terms"
-              >
+              <label class="form__label form__label_checkbox" for="terms">
                 <input
-                  class="reservation__checkbox"
+                  class="form__checkbox"
                   type="checkbox"
                   name="terms"
                   id="terms"
